--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,4 +8,57 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.header {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+  background-color: #171717;
+
+  .header-item {
+    display: flex;
+  }
+
+  .header-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #171717;
+    border: none;
+    margin: 10px;
+    color: rgb(255, 252, 226);
+  
+    .header-button-icon {
+      width: 20px;
+      height: 20px;
+      fill: rgb(255, 252, 226);
+    }
+
+    .header-button-text {
+      margin: 2px;
+    }
+
+    .header-button-line {
+      transition-duration: 500ms;
+      transition-timing-function: ease;
+      width: 0%;
+      height: 2px;
+      background-color: rgb(71, 71, 71);
+    }
+
+    &:hover .header-button-line {
+      width: 120%;
+    }
+  }
+}
+
+
+
+
+
+
+
+
 
