--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -103,4 +103,66 @@ body {
   }
 }
 
+.welcome-block {
+  position: relative;
+  width: 100%;
+  height: 70vh;
+  background-color: #181100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  .welcome-block-image-overlay {
+    position: absolute;
+    top: 0;
+    left: 15%;
+    width: 45%;
+    height: 100%;
+    background: url('assets/pictures/back_2.jpg') no-repeat center center/cover;
+    mask-image: linear-gradient(to right, transparent, black 50%, transparent);
+
+    @media (max-width: 900px) {
+      width: 70%  
+    }
+    @media (max-width: 560px) {
+      width: 100%;
+      left: 0;
+    }
+  }
+
+  .welcome-block-text {
+    position: relative; 
+    width: fit-content;
+    left: 20%;
+    color: white;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+
+    @media (max-width: 560px) {
+      left: 0;
+    }
+
+    .welocme-block-text-line-1 {
+      width: fit-content;
+      margin: 0;
+      font-size: 4em;
+      transform: translateX(0px);
+    }
+    .welocme-block-text-line-2 {
+      width: fit-content;
+      margin: 0;
+      font-size: 4em;
+      transform: translateX(25px);
+    }
+    .welocme-block-text-line-3 {
+      width: fit-content;
+      margin: 0;
+      font-size: 1.5em;
+      transform: translateX(40px);
+      color: rgb(184, 184, 184);
+    }
+  }
+
+}
 
