--- a/frontend/src/styles/diskEntryBlock.css
+++ b/frontend/src/styles/diskEntryBlock.css
@@ -1,42 +1,78 @@
-.disk-entry-block {
-  width: 300px;
-  height: 400px;
-  background-color: rgb(236, 236, 236);
+.disk-card {
+  width: 250px;
   border-radius: 30px;
-  font-weight: 700;
+  font-weight: 400;
   display: flex;
   flex-direction: column;
+  box-sizing: border-box;
+  border: none;
+  background-color: inherit;
+
+  @media (max-width: 540px) and (min-width: 441px) {
+    width: 200px;
+  }
+  @media (max-width: 441px) {
+    width: 250px;
+  }
 }
 
-.disk-entry-block-img {
-  border-top-left-radius: 30px;
-  border-top-right-radius: 30px;
+.disk-card__img {
+  border-radius: 10px;
   height: 240px;
-  background: url('../assets/pictures/back_2.jpg') center;
+  background-image: url('../assets/pictures/back_2.jpg');
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+  margin: 0 0 8px;
 }
 
-.disk-entry-block-text {
-  margin: 4px 15px;
-  font-size: 1em;
-}
-
-.disk-entry-block-price-block {
-  font-size: 2.2em;
+.disk-card__first-text {
   display: flex;
-  justify-content: flex-end;
-  margin: 4px 35px;
+  padding: 0 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  text-wrap: nowrap;
+}
 
-  .disk-entry-block-price-block-price {
+.disk-card__main-text {
+  margin: 2px;
+  font-size: 0.8em;
+  color: rgb(26, 26, 26);
+  overflow: hidden;
+  width: fit-content;
+}
+.disk-card__sub-text {
+  color: rgb(158, 158, 158);
+  margin: 2px;
+  font-size: 0.8em;
+  overflow: hidden;
+  width: fit-content;
+  text-overflow: ellipsis;
+  text-wrap: nowrap;
+}
+
+.disk-card__price-block {
+  font-size: 2em;
+  display: flex;
+  margin: 2px;
+  padding: 0 0 0 10px;
+
+  .disk-card__price-block-price {
     font-size: 0.75em;
     text-decoration: line-through;
     color: rgb(116, 108, 98);
     margin: 0 15px 0 0;
     align-self: self-end;
   }
-  .disk-entry-block-price-block-sale {
+  .disk-card__price-block-sale {
     color: rgb(248, 120, 120);
   }
-  .disk-entry-block-price-block-without-sale {
+  
+  /* @media (max-width: 500) {
+    font-size: 1.5em;
 
-  }
+    .disk-entry-block-price-block-price {
+      font-size: 0.65em;
+    }
+  } */
 }
